--- a/src/assets/scss/components/_main.scss
+++ b/src/assets/scss/components/_main.scss
@@ -90,6 +90,14 @@
 
 .main--dataset {
 	padding-top: 120px; 
+
+	@include breakpoint-down(tablet) {
+		padding-top: 160px; 
+	}
+
+	@include breakpoint-down(mobile) {
+		padding-top: 170px; 
+	}
 }
 
 /* ------------------------------------------------------------ *\
@@ -133,5 +141,15 @@
 		@include breakpoint-down(large-desktop) {
 			padding: 45px 45px;
 		}
+		@include breakpoint-down(tablet) {
+			padding-left: 30px; 
+			padding-right: 30px;
+		}
+
+		@include breakpoint-down(mobile-small) {
+			padding-left: 15px; 
+			padding-right: 15px;
+		}
 	}
 }
+
