--- a/src/assets/scss/components/_subheader.scss
+++ b/src/assets/scss/components/_subheader.scss
@@ -151,7 +151,7 @@
 	.subheader__document .dropdown-holder {
 		position: absolute; 
 		right: 0; 
-		bottom: 0; 
+		bottom: 10px; 
 	}
 
 	.subheader__document .dropdown-holder .dropdown__body {
